# orb-software

./: Cargo.toml
attest/src/: main.rs  remote_api.rs
backend-state/src/: main.rs
cellcom/: Cargo.toml
cellcom/src/: geoloc.rs  lib.rs  main.rs  wifi.rs
cellcom/src/cell/: data.rs  mod.rs  parser.rs  types.rs
experiments/zenoh/src/: main.rs
mcu-util/src/: main.rs
supervisor/src/: main.rs
supervisor/tests/it/: helpers.rs
telemetry/: Cargo.toml
telemetry/examples/: async.rs  custom_filter.rs  simple.rs  sync.rs
telemetry/src/: lib.rs
thermal-cam-ctrl/src/: main.rs
ui/examples/: ui-replay.rs
ui/src/: main.rs
update-agent/core/src/: claim.rs
update-agent/src/: claim.rs  component.rs  main.rs
update-agent/src/update/: tests.rs
update-agent/t/: podman-runner.nu
update-agent/tests/: main.rs
update-verifier/src/: main.rs
