[package]
name = "orb-telemetry"
version = "0.0.0"
description = "Standardized telemetry setup for the orb"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
opentelemetry-otlp = { workspace = true, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry.workspace = true
tracing-journald.workspace = true
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing.workspace = true

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tokio_unstable)']
